--- a/tools/db-upgrade/portal-ext.properties
+++ b/tools/db-upgrade/portal-ext.properties
@@ -4,3 +4,5 @@ jdbc.default.driverClassName=com.mysql.jdbc.Driver
 jdbc.default.url=jdbc:mysql://localhost/lportal?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
 jdbc.default.username=
 jdbc.default.password=
+
+module.framework.base.dir=../../../bundles/osgi
